--- a/MS_DesktopApp/UI/AllOperationsWindow.ui
+++ b/MS_DesktopApp/UI/AllOperationsWindow.ui
@@ -48,11 +48,11 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <pointsize>10</pointsize>
     </font>
    </property>
    <property name="text">
-    <string>Удалить выделенную операцию</string>
+    <string>Удалить выделенную операцию из бд</string>
    </property>
   </widget>
   <widget class="QTableWidget" name="tableWidget">
